# titou_ws

./: .gitignore  README.md
devel/: .catkin  _setup_util.py
devel/include/cartesian_control_msgs/: CartesianPosture.h  CartesianTolerance.h  CartesianTrajectory.h  CartesianTrajectoryPoint.h  FollowCartesianTrajectoryAction.h  FollowCartesianTrajectoryActionFeedback.h  FollowCartesianTrajectoryActionGoal.h  FollowCartesianTrajectoryActionResult.h  FollowCartesianTrajectoryFeedback.h  FollowCartesianTrajectoryGoal.h  FollowCartesianTrajectoryResult.h
devel/include/pass_through_controllers/: SpeedScalingConfig.h
devel/include/rokubimini_msgs/: FirmwareUpdateEthercat.h  FirmwareUpdateEthercatRequest.h  FirmwareUpdateEthercatResponse.h  FirmwareUpdateSerial.h  FirmwareUpdateSerialRequest.h  FirmwareUpdateSerialResponse.h  GetSensorConfiguration.h  GetSensorConfigurationRequest.h  GetSensorConfigurationResponse.h  Reading.h  ResetWrench.h  ResetWrenchRequest.h  ResetWrenchResponse.h  SetSensorConfiguration.h  SetSensorConfigurationRequest.h  SetSensorConfigurationResponse.h
src/: README.md
src/Universal_Robots_ROS_passthrough_controllers/: README.md
src/bota_driver/: .gitlab-ci.yml  README.md
src/bota_driver/bota_driver/: CMakeLists.txt  package.xml
src/bota_driver/bota_driver_testing/: CMakeLists.txt  package.xml
src/bota_driver/bota_driver_testing/config/: rokubimini_sensor_test_128.yaml  rokubimini_sensor_test_256.yaml  rokubimini_sensor_test_512.yaml  rokubimini_sensor_test_64.yaml  rokubimini_sensor_test_ft_offsets.yaml
src/bota_driver/bota_driver_testing/launch/: bota_driver_testing_boot_async.test  bota_driver_testing_boot_sync.test  bota_driver_testing_ft_offsets_async.test  bota_driver_testing_ft_offsets_sync.test  bota_driver_testing_hz_128_async.test  bota_driver_testing_hz_128_sync.test  bota_driver_testing_hz_256_async.test  bota_driver_testing_hz_256_sync.test  bota_driver_testing_hz_512_async.test  bota_driver_testing_hz_512_sync.test  bota_driver_testing_hz_64_async.test  bota_driver_testing_hz_64_sync.test  bota_driver_testing_param_async.test  bota_driver_testing_param_sync.test  bota_driver_testing_reset_service_async.test  bota_driver_testing_reset_service_sync.test  bota_driver_testing_zero_measurements_async.test  bota_driver_testing_zero_measurements_sync.test
src/bota_driver/bota_driver_testing/src/: TestBotaDriverBoot.cpp  TestBotaDriverFTOffsets.cpp  TestBotaDriverResetService.cpp  TestBotaDriverZeroMeasurements.cpp  main.cpp
src/bota_driver/bota_node/bota_node/: CMakeLists.txt  README.md  package.xml
src/bota_driver/bota_node/bota_node/include/bota_node/: Node.hpp  Nodewrap.hpp
src/bota_driver/bota_node/bota_node/src/: Node.cpp
src/bota_driver/rokubimini/: CMakeLists.txt
src/bota_driver/rokubimini/config/: rokubimini_sensor.yaml  setup.yaml
src/bota_driver/rokubimini/include/rokubimini/: Reading.hpp  Rokubimini.hpp
src/bota_driver/rokubimini/include/rokubimini/calibration/: ForceTorqueCalibration.hpp  SensorCalibration.hpp
src/bota_driver/rokubimini/include/rokubimini/configuration/: Configuration.hpp  ForceTorqueFilter.hpp  SensorConfiguration.hpp
src/bota_driver/rokubimini/src/rokubimini/: Reading.cpp  Rokubimini.cpp
src/bota_driver/rokubimini/src/rokubimini/calibration/: ForceTorqueCalibration.cpp  SensorCalibration.cpp
src/bota_driver/rokubimini/src/rokubimini/configuration/: Configuration.cpp  ForceTorqueFilter.cpp  SensorConfiguration.cpp
src/bota_driver/rokubimini/test/: TestConfiguration.cpp  TestReading.cpp  TestRokubimini.cpp  main.cpp
src/bota_driver/rokubimini_bus_manager/: CMakeLists.txt  package.xml
src/bota_driver/rokubimini_bus_manager/include/rokubimini_bus_manager/: BusManager.hpp
src/bota_driver/rokubimini_bus_manager/src/rokubimini_bus_manager/: BusManager.cpp
src/bota_driver/rokubimini_description/: CMakeLists.txt
src/bota_driver/rokubimini_description/meshes/BFT_SENS_ECAT_M8/: mounting.STL  wrench.STL
src/bota_driver/rokubimini_description/urdf/: BFT_ROKA_ECAT_M8.urdf.xacro  BFT_ROKA_ECAT_M8_robot.urdf.xacro  BFT_ROKA_SER_M8.urdf.xacro  BFT_ROKA_SER_M8_robot.urdf.xacro  BFT_ROKS_ECAT_M8.urdf.xacro  BFT_ROKS_ECAT_M8_robot.urdf.xacro  BFT_ROKS_SER_M8.urdf.xacro  BFT_ROKS_SER_M8_robot.urdf.xacro  BFT_SENS_ECAT_M8.urdf.xacro  BFT_SENS_ECAT_M8_robot.urdf.xacro  BFT_SENS_ECAT_M8_robot_realsense.urdf.xacro  BFT_SENS_SER_M8.urdf.xacro
src/bota_driver/rokubimini_ethercat/: CMakeLists.txt  package.xml
src/bota_driver/rokubimini_ethercat/include/rokubimini_ethercat/: RokubiminiEthercat.hpp  RokubiminiEthercatBusManager.hpp  RokubiminiEthercatSlave.hpp
src/bota_driver/rokubimini_ethercat/include/rokubimini_ethercat/soem_interface/: EthercatBusBase.hpp  EthercatSlaveBase.hpp
src/bota_driver/rokubimini_ethercat/launch/: rokubimini_ethercat.launch
src/bota_driver/rokubimini_ethercat/src/rokubimini_ethercat/: RokubiminiEthercat.cpp  RokubiminiEthercatBusManager.cpp  RokubiminiEthercatSlave.cpp
src/bota_driver/rokubimini_ethercat/src/rokubimini_ethercat/soem_interface/: EthercatBusBase.cpp
src/bota_driver/rokubimini_msgs/: CMakeLists.txt  package.xml
src/bota_driver/rokubimini_msgs/msg/: Reading.msg
src/bota_driver/rokubimini_serial/: CMakeLists.txt  package.xml
src/bota_driver/rokubimini_serial/include/rokubimini_serial/: RokubiminiSerial.hpp  RokubiminiSerialCommunication.hpp  RokubiminiSerialImpl.hpp  states.hpp
src/bota_driver/rokubimini_serial/launch/: rokubimini_serial.launch
src/bota_driver/rokubimini_serial/src/rokubimini_serial/: RokubiminiSerial.cpp  RokubiminiSerialBusManager.cpp  RokubiminiSerialCommunication.cpp  RokubiminiSerialImpl.cpp
src/bota_serial_driver/: README.md  serial_driver
src/etherdaq_ros/: .gitignore
src/lwr_robot_description/: CMakeLists.txt  README.md  lwr-robot.urdf  lwr-robot2.urdf
src/lwr_robot_description/launch/: display.launch
src/lwr_robot_description/rviz/: config.rviz
src/moveit_lwr/: .setup_assistant  CMakeLists.txt
src/my_robot_controller/: CMakeLists.txt
src/wrench_camera_data/: wrench_data_2025-07-28_12-40-27.csv
(+384 files in other folders)
