<?xml version="1.0"?>
<package format="2">
  <name>bota_driver_testing</name>
  <version>0.6.1</version>
  <description>ROS node for communicating with rokubimini sensors</description>

  <license>Apache 2.0</license>
  <url>http://wiki.ros.org/bota_driver</url>
  <maintainer email="sw-support@botasys.com">Bota Systems AG</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>bota_node</depend>
  <depend>rokubimini</depend>
  <depend>rokubimini_serial</depend>
  <depend>rokubimini_ethercat</depend>
  <depend>rokubimini_bus_manager</depend>
  <depend>rokubimini_msgs</depend>
  <depend>rostest</depend>
  <depend>rosgraph_msgs</depend>
  <depend>geometry_msgs</depend>
  <test_depend>gtest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
