<?xml version="1.0"?>

<package format="2">

  <name>bota_node</name>
  <version>0.6.1</version>
  <description>ROS node wrapper with some convenience functions using *bota_worker*.</description>

  <license>BSD</license>
  <url>http://wiki.ros.org/bota_driver</url>
  <maintainer email="sw-support@botasys.com">Bota Systems AG</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>bota_worker</depend>
  <depend>bota_signal_handler</depend>
  <depend>roscpp</depend>

  <test_depend>gtest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
